Enable common kit has its own tests folder
Reviewed By: jawwad

Differential Revision: D30650186

fbshipit-source-id: ea3db86867be6f8ec3e066ee095e990dcfe168cc