@@ -42,6 +42,28 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.3'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_ver"
+
+    // Unit Tests
+    testImplementation project(":facebook-testutil")
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'androidx.test:core:1.0.0'
+
+    testImplementation "org.mockito:mockito-inline:2.26.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+
+    def powerMockVersion = '2.0.2'
+    testImplementation "org.powermock:powermock-core:$powerMockVersion"
+    testImplementation "org.powermock:powermock-api-mockito2:$powerMockVersion"
+    testImplementation "org.powermock:powermock-module-junit4:$powerMockVersion"
+    testImplementation "org.powermock:powermock-module-junit4-rule:$powerMockVersion"
+    testImplementation "org.powermock:powermock-classloading-xstream:$powerMockVersion"
+    testImplementation 'org.assertj:assertj-core:3.15.0'
+
+
+    testImplementation "com.android.installreferrer:installreferrer:1.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_ver"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_ver"
 }
 
 android {
@@ -66,6 +88,19 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs '-XX:MaxPermSize=1024m'
+            maxHeapSize = "4096m"
+        }
+    }
+
+    kotlinOptions {
+        useOldBackend = true
+        // Keep jvm target at 1.6 to maintain compatibility with Android API level < 26
+        jvmTarget = "1.6"
     }
 
     buildTypes {
